<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.kidospartners.KidosPartnersLogin"
    android:orientation="vertical">
    

     <EditText
                android:id="@+id/txt_login_phno"
                android:paddingTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_txt_phno" />
     
     <EditText
                android:id="@+id/txt_password"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_password" />
     
     
     <Button android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_gravity="center_vertical"
            android:text="@string/btn_login"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"
            android:onClick="Login"/>
     
     
       <TextView 
        android:id="@+id/label_register"
		android:layout_marginTop="20dp"
		android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Not yet registered? Sign up now!!"
        android:textColor="@color/colorBlue"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        
        />
 
</LinearLayout>